--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <div class="content">
       Put elements here
     </div>
-    <script src="./test.js">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="./test.js"></script>
   </body>
 </html>
